fix(application-header): truncate heading if needed in collapsed mode

--- a/projects/element-theme/src/styles/components/_application-header.scss
+++ b/projects/element-theme/src/styles/components/_application-header.scss
@@ -61,8 +61,9 @@
 
 .header-brand {
   display: flex;
-  flex: 1 1 auto;
+  flex: 1 1 0;
   align-items: center;
+  min-inline-size: 0;
 }
 
 .header-logo {
@@ -82,6 +83,8 @@
   margin: 0;
   line-height: normal;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 %collapsible-expanded {
@@ -199,6 +202,7 @@
         display: flex;
         flex: 1 1 33.333%;
         justify-content: flex-start;
+        min-inline-size: auto; // this prevents text-overflow in the desktop mode, instead header elements will be pushed.
       }
 
       .header-navigation {
